src/parser/hddl.output
Terminale, die in Grammatik unbenutzt sind

   FLOAT


Grammatik

    0 $accept: document $end

    1 document: domain
    2         | problem

    3 domain: '(' KEY_DEFINE '(' KEY_DOMAIN domain_symbol ')' domain_defs ')'

    4 domain_defs: domain_defs require_def
    5            | domain_defs type_def
    6            | domain_defs const_def
    7            | domain_defs predicates_def
    8            | domain_defs functions_def
    9            | domain_defs task_def
   10            | domain_defs method_def
   11            | %empty

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME ')' problem_defs ')'

   13 problem_defs: problem_defs require_def
   14             | problem_defs p_object_declaration
   15             | problem_defs p_htn
   16             | problem_defs p_init
   17             | problem_defs p_goal
   18             | problem_defs p_constraint
   19             | problem_defs p_metric
   20             | %empty

   21 p_object_declaration: '(' KEY_OBJECTS constant_declaration_list ')'

   22 p_init: '(' KEY_INIT init_el ')'

   23 init_el: init_el literal
   24        | init_el '(' '=' literal INT ')'
   25        | %empty

   26 p_goal: '(' KEY_GOAL gd ')'

   27 htn_type: KEY_HTN
   28         | KEY_TIHTN

   29 parameters-option: KEY_PARAMETERS '(' typed_var_list ')'
   30                  | %empty

   31 p_htn: '(' htn_type parameters-option tasknetwork_def ')'

   32 p_constraint: '(' KEY_CONSTRAINTS gd ')'

   33 p_metric: '(' KEY_METRIC KEY_MIMIZE metric_f_exp ')'

   34 metric_f_exp: NAME
   35             | '(' NAME ')'

   36 domain_symbol: NAME

   37 require_def: '(' KEY_REQUIREMENTS require_defs ')'

   38 require_defs: require_defs REQUIRE_NAME
   39             | %empty

   40 type_def: '(' KEY_TYPES type_def_list ')'

   41 type_def_list: NAME-list
   42              | NAME-list-non-empty '-' NAME type_def_list

   43 const_def: '(' KEY_CONSTANTS constant_declaration_list ')'

   44 constant_declaration_list: constant_declaration_list constant_declarations
   45                          | %empty

   46 constant_declarations: NAME-list-non-empty '-' NAME

   47 predicates_def: '(' KEY_PREDICATES atomic_predicate_def-list ')'

   48 atomic_predicate_def-list: atomic_predicate_def-list atomic_predicate_def
   49                          | %empty

   50 atomic_predicate_def: '(' NAME typed_var_list ')'

   51 functions_def: '(' KEY_FUNCTIONS typed_atomic_function_def-list ')'

   52 typed_atomic_function_def-list: atomic_function_def-list typed_function_list_continuation

   53 typed_function_list_continuation: '-' NAME typed_atomic_function_def-list
   54                                 | %empty

   55 atomic_function_def-list: atomic_function_def-list atomic_predicate_def
   56                         | %empty

   57 task_or_action: KEY_TASK
   58               | KEY_ACTION

   59 task_def: '(' task_or_action NAME parameters-option precondition_option effect_option ')'

   60 precondition_option: KEY_PRECONDITION gd
   61                    | %empty

   62 effect_option: KEY_EFFECT effect
   63              | %empty

   64 method_def: '(' KEY_METHOD NAME parameters-option KEY_TASK '(' NAME var_or_const-list ')' precondition_option effect_option tasknetwork_def ')'

   65 tasknetwork_def: subtasks_option ordering_option constraints_option causal_links_option

   66 subtasks_option: KEY_TASKS subtask_defs
   67                | KEY_ORDER_TASKS subtask_defs
   68                | %empty

   69 ordering_option: KEY_ORDER ordering_defs
   70                | %empty

   71 constraints_option: KEY_CONSTRAINTS constraint_def
   72                   | %empty

   73 causal_links_option: KEY_CAUSAL_LINKS causallink_defs
   74                    | %empty

   75 subtask_defs: '(' ')'
   76             | subtask_def
   77             | '(' KEY_AND subtask_def-list ')'

   78 subtask_def-list: subtask_def-list subtask_def
   79                 | %empty

   80 subtask_def: '(' NAME var_or_const-list ')'
   81            | '(' NAME '(' NAME var_or_const-list ')' ')'

   82 ordering_defs: '(' ')'
   83              | ordering_def
   84              | '(' KEY_AND ordering_def-list ')'

   85 ordering_def-list: ordering_def-list ordering_def
   86                  | %empty

   87 ordering_def: '(' NAME '<' NAME ')'

   88 constraint_def-list: constraint_def-list constraint_def
   89                    | %empty

   90 constraint_def: '(' ')'
   91               | '(' KEY_AND constraint_def-list ')'
   92               | '(' '=' var_or_const var_or_const ')'
   93               | '(' KEY_NOT '(' '=' var_or_const var_or_const ')' ')'
   94               | '(' KEY_TYPEOF typed_var ')'
   95               | '(' KEY_NOT '(' KEY_TYPEOF typed_var ')' ')'

   96 causallink_defs: '(' ')'
   97                | causallink_def
   98                | '(' KEY_AND causallink_def-list ')'

   99 causallink_def-list: causallink_def-list causallink_def
  100                    | %empty

  101 causallink_def: '(' NAME literal NAME ')'

  102 gd: gd_empty
  103   | atomic_formula
  104   | gd_negation
  105   | gd_implication
  106   | gd_conjuction
  107   | gd_disjuction
  108   | gd_existential
  109   | gd_universal
  110   | gd_equality_constraint

  111 gd-list: gd-list gd
  112        | %empty

  113 gd_empty: '(' ')'

  114 gd_conjuction: '(' KEY_AND gd-list ')'

  115 gd_disjuction: '(' KEY_OR gd-list ')'

  116 gd_negation: '(' KEY_NOT gd ')'

  117 gd_implication: '(' KEY_IMPLY gd gd ')'

  118 gd_existential: '(' KEY_EXISTS '(' typed_var_list ')' gd ')'

  119 gd_universal: '(' KEY_FORALL '(' typed_var_list ')' gd ')'

  120 gd_equality_constraint: '(' '=' var_or_const var_or_const ')'

  121 var_or_const-list: var_or_const-list NAME
  122                  | var_or_const-list VAR_NAME
  123                  | %empty

  124 var_or_const: NAME
  125             | VAR_NAME

  126 atomic_formula: '(' NAME var_or_const-list ')'

  127 effect-list: effect-list effect
  128            | %empty

  129 effect: eff_empty
  130       | eff_conjunction
  131       | eff_universal
  132       | eff_conditional
  133       | literal
  134       | p_effect

  135 eff_empty: '(' ')'

  136 eff_conjunction: '(' KEY_AND effect-list ')'

  137 eff_universal: '(' KEY_FORALL '(' typed_var_list ')' effect ')'

  138 eff_conditional: '(' KEY_WHEN gd effect ')'

  139 literal: neg_atomic_formula
  140        | atomic_formula

  141 neg_atomic_formula: '(' KEY_NOT atomic_formula ')'

  142 p_effect: '(' assign_op f_head f_exp ')'

  143 assign_op: KEY_INCREASE

  144 f_head: NAME
  145       | '(' NAME var_or_const-list ')'

  146 f_exp: INT
  147      | f_head

  148 NAME-list-non-empty: NAME-list NAME

  149 NAME-list: NAME-list NAME
  150          | %empty

  151 VAR_NAME-list-non-empty: VAR_NAME-list VAR_NAME

  152 VAR_NAME-list: VAR_NAME-list VAR_NAME
  153              | %empty

  154 typed_vars: VAR_NAME-list-non-empty '-' NAME

  155 typed_var: VAR_NAME '-' NAME

  156 typed_var_list: typed_var_list typed_vars
  157               | %empty


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
'(' (40) 3 12 21 22 24 26 29 31 32 33 35 37 40 43 47 50 51 59 64 75
    77 80 81 82 84 87 90 91 92 93 94 95 96 98 101 113 114 115 116 117
    118 119 120 126 135 136 137 138 141 142 145
')' (41) 3 12 21 22 24 26 29 31 32 33 35 37 40 43 47 50 51 59 64 75
    77 80 81 82 84 87 90 91 92 93 94 95 96 98 101 113 114 115 116 117
    118 119 120 126 135 136 137 138 141 142 145
'-' (45) 42 46 53 154 155
'<' (60) 87
'=' (61) 24 92 93 120
error (256)
KEY_TYPES (258) 40
KEY_DEFINE (259) 3 12
KEY_DOMAIN (260) 3 12
KEY_PROBLEM (261) 12
KEY_REQUIREMENTS (262) 37
KEY_PREDICATES (263) 47
KEY_FUNCTIONS (264) 51
KEY_TASK (265) 57 64
KEY_CONSTANTS (266) 43
KEY_ACTION (267) 58
KEY_PARAMETERS (268) 29
KEY_PRECONDITION (269) 60
KEY_EFFECT (270) 62
KEY_METHOD (271) 64
KEY_GOAL (272) 26
KEY_INIT (273) 22
KEY_OBJECTS (274) 21
KEY_HTN (275) 27
KEY_TIHTN (276) 28
KEY_MIMIZE (277) 33
KEY_METRIC (278) 33
KEY_AND (279) 77 84 91 98 114 136
KEY_OR (280) 115
KEY_NOT (281) 93 95 116 141
KEY_IMPLY (282) 117
KEY_FORALL (283) 119 137
KEY_EXISTS (284) 118
KEY_WHEN (285) 138
KEY_INCREASE (286) 143
KEY_TYPEOF (287) 94 95
KEY_CAUSAL_LINKS (288) 73
KEY_CONSTRAINTS (289) 32 71
KEY_ORDER (290) 69
KEY_ORDER_TASKS (291) 67
KEY_TASKS (292) 66
NAME (293) 12 34 35 36 42 46 50 53 59 64 80 81 87 101 121 124 126 144
    145 148 149 154 155
REQUIRE_NAME (294) 38
VAR_NAME (295) 122 125 151 152 155
FLOAT (296)
INT (297) 24 146


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (48)
    auf der linken Seite: 0
document (49)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
domain (50)
    auf der linken Seite: 3, auf der rechten Seite: 1
domain_defs (51)
    auf der linken Seite: 4 5 6 7 8 9 10 11, auf der rechten Seite:
    3 4 5 6 7 8 9 10
problem (52)
    auf der linken Seite: 12, auf der rechten Seite: 2
problem_defs (53)
    auf der linken Seite: 13 14 15 16 17 18 19 20, auf der rechten Seite:
    12 13 14 15 16 17 18 19
p_object_declaration (54)
    auf der linken Seite: 21, auf der rechten Seite: 14
p_init (55)
    auf der linken Seite: 22, auf der rechten Seite: 16
init_el (56)
    auf der linken Seite: 23 24 25, auf der rechten Seite: 22 23 24
p_goal (57)
    auf der linken Seite: 26, auf der rechten Seite: 17
htn_type (58)
    auf der linken Seite: 27 28, auf der rechten Seite: 31
parameters-option (59)
    auf der linken Seite: 29 30, auf der rechten Seite: 31 59 64
p_htn (60)
    auf der linken Seite: 31, auf der rechten Seite: 15
p_constraint (61)
    auf der linken Seite: 32, auf der rechten Seite: 18
p_metric (62)
    auf der linken Seite: 33, auf der rechten Seite: 19
metric_f_exp (63)
    auf der linken Seite: 34 35, auf der rechten Seite: 33
domain_symbol (64)
    auf der linken Seite: 36, auf der rechten Seite: 3
require_def (65)
    auf der linken Seite: 37, auf der rechten Seite: 4 13
require_defs (66)
    auf der linken Seite: 38 39, auf der rechten Seite: 37 38
type_def (67)
    auf der linken Seite: 40, auf der rechten Seite: 5
type_def_list (68)
    auf der linken Seite: 41 42, auf der rechten Seite: 40 42
const_def (69)
    auf der linken Seite: 43, auf der rechten Seite: 6
constant_declaration_list (70)
    auf der linken Seite: 44 45, auf der rechten Seite: 21 43 44
constant_declarations (71)
    auf der linken Seite: 46, auf der rechten Seite: 44
predicates_def (72)
    auf der linken Seite: 47, auf der rechten Seite: 7
atomic_predicate_def-list (73)
    auf der linken Seite: 48 49, auf der rechten Seite: 47 48
atomic_predicate_def (74)
    auf der linken Seite: 50, auf der rechten Seite: 48 55
functions_def (75)
    auf der linken Seite: 51, auf der rechten Seite: 8
typed_atomic_function_def-list (76)
    auf der linken Seite: 52, auf der rechten Seite: 51 53
typed_function_list_continuation (77)
    auf der linken Seite: 53 54, auf der rechten Seite: 52
atomic_function_def-list (78)
    auf der linken Seite: 55 56, auf der rechten Seite: 52 55
task_or_action (79)
    auf der linken Seite: 57 58, auf der rechten Seite: 59
task_def (80)
    auf der linken Seite: 59, auf der rechten Seite: 9
precondition_option (81)
    auf der linken Seite: 60 61, auf der rechten Seite: 59 64
effect_option (82)
    auf der linken Seite: 62 63, auf der rechten Seite: 59 64
method_def (83)
    auf der linken Seite: 64, auf der rechten Seite: 10
tasknetwork_def (84)
    auf der linken Seite: 65, auf der rechten Seite: 31 64
subtasks_option (85)
    auf der linken Seite: 66 67 68, auf der rechten Seite: 65
ordering_option (86)
    auf der linken Seite: 69 70, auf der rechten Seite: 65
constraints_option (87)
    auf der linken Seite: 71 72, auf der rechten Seite: 65
causal_links_option (88)
    auf der linken Seite: 73 74, auf der rechten Seite: 65
subtask_defs (89)
    auf der linken Seite: 75 76 77, auf der rechten Seite: 66 67
subtask_def-list (90)
    auf der linken Seite: 78 79, auf der rechten Seite: 77 78
subtask_def (91)
    auf der linken Seite: 80 81, auf der rechten Seite: 76 78
ordering_defs (92)
    auf der linken Seite: 82 83 84, auf der rechten Seite: 69
ordering_def-list (93)
    auf der linken Seite: 85 86, auf der rechten Seite: 84 85
ordering_def (94)
    auf der linken Seite: 87, auf der rechten Seite: 83 85
constraint_def-list (95)
    auf der linken Seite: 88 89, auf der rechten Seite: 88 91
constraint_def (96)
    auf der linken Seite: 90 91 92 93 94 95, auf der rechten Seite:
    71 88
causallink_defs (97)
    auf der linken Seite: 96 97 98, auf der rechten Seite: 73
causallink_def-list (98)
    auf der linken Seite: 99 100, auf der rechten Seite: 98 99
causallink_def (99)
    auf der linken Seite: 101, auf der rechten Seite: 97 99
gd (100)
    auf der linken Seite: 102 103 104 105 106 107 108 109 110, auf der rechten Seite:
    26 32 60 111 116 117 118 119 138
gd-list (101)
    auf der linken Seite: 111 112, auf der rechten Seite: 111 114 115
gd_empty (102)
    auf der linken Seite: 113, auf der rechten Seite: 102
gd_conjuction (103)
    auf der linken Seite: 114, auf der rechten Seite: 106
gd_disjuction (104)
    auf der linken Seite: 115, auf der rechten Seite: 107
gd_negation (105)
    auf der linken Seite: 116, auf der rechten Seite: 104
gd_implication (106)
    auf der linken Seite: 117, auf der rechten Seite: 105
gd_existential (107)
    auf der linken Seite: 118, auf der rechten Seite: 108
gd_universal (108)
    auf der linken Seite: 119, auf der rechten Seite: 109
gd_equality_constraint (109)
    auf der linken Seite: 120, auf der rechten Seite: 110
var_or_const-list (110)
    auf der linken Seite: 121 122 123, auf der rechten Seite: 64 80
    81 121 122 126 145
var_or_const (111)
    auf der linken Seite: 124 125, auf der rechten Seite: 92 93 120
atomic_formula (112)
    auf der linken Seite: 126, auf der rechten Seite: 103 140 141
effect-list (113)
    auf der linken Seite: 127 128, auf der rechten Seite: 127 136
effect (114)
    auf der linken Seite: 129 130 131 132 133 134, auf der rechten Seite:
    62 127 137 138
eff_empty (115)
    auf der linken Seite: 135, auf der rechten Seite: 129
eff_conjunction (116)
    auf der linken Seite: 136, auf der rechten Seite: 130
eff_universal (117)
    auf der linken Seite: 137, auf der rechten Seite: 131
eff_conditional (118)
    auf der linken Seite: 138, auf der rechten Seite: 132
literal (119)
    auf der linken Seite: 139 140, auf der rechten Seite: 23 24 101
    133
neg_atomic_formula (120)
    auf der linken Seite: 141, auf der rechten Seite: 139
p_effect (121)
    auf der linken Seite: 142, auf der rechten Seite: 134
assign_op (122)
    auf der linken Seite: 143, auf der rechten Seite: 142
f_head (123)
    auf der linken Seite: 144 145, auf der rechten Seite: 142 147
f_exp (124)
    auf der linken Seite: 146 147, auf der rechten Seite: 142
NAME-list-non-empty (125)
    auf der linken Seite: 148, auf der rechten Seite: 42 46
NAME-list (126)
    auf der linken Seite: 149 150, auf der rechten Seite: 41 148 149
VAR_NAME-list-non-empty (127)
    auf der linken Seite: 151, auf der rechten Seite: 154
VAR_NAME-list (128)
    auf der linken Seite: 152 153, auf der rechten Seite: 151 152
typed_vars (129)
    auf der linken Seite: 154, auf der rechten Seite: 156
typed_var (130)
    auf der linken Seite: 155, auf der rechten Seite: 94 95
typed_var_list (131)
    auf der linken Seite: 156 157, auf der rechten Seite: 29 50 118
    119 137 156


Zustand 0

    0 $accept: . document $end

    '('  schiebe und gehe zu Zustand 1 über

    document  gehe zu Zustand 2 über
    domain    gehe zu Zustand 3 über
    problem   gehe zu Zustand 4 über


Zustand 1

    3 domain: '(' . KEY_DEFINE '(' KEY_DOMAIN domain_symbol ')' domain_defs ')'
   12 problem: '(' . KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME ')' problem_defs ')'

    KEY_DEFINE  schiebe und gehe zu Zustand 5 über


Zustand 2

    0 $accept: document . $end

    $end  schiebe und gehe zu Zustand 6 über


Zustand 3

    1 document: domain .

    $default  reduziere mit Regel 1 (document)


Zustand 4

    2 document: problem .

    $default  reduziere mit Regel 2 (document)


Zustand 5

    3 domain: '(' KEY_DEFINE . '(' KEY_DOMAIN domain_symbol ')' domain_defs ')'
   12 problem: '(' KEY_DEFINE . '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME ')' problem_defs ')'

    '('  schiebe und gehe zu Zustand 7 über


Zustand 6

    0 $accept: document $end .

    $default  annehmen


Zustand 7

    3 domain: '(' KEY_DEFINE '(' . KEY_DOMAIN domain_symbol ')' domain_defs ')'
   12 problem: '(' KEY_DEFINE '(' . KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME ')' problem_defs ')'

    KEY_DOMAIN   schiebe und gehe zu Zustand 8 über
    KEY_PROBLEM  schiebe und gehe zu Zustand 9 über


Zustand 8

    3 domain: '(' KEY_DEFINE '(' KEY_DOMAIN . domain_symbol ')' domain_defs ')'

    NAME  schiebe und gehe zu Zustand 10 über

    domain_symbol  gehe zu Zustand 11 über


Zustand 9

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM . NAME ')' '(' KEY_DOMAIN NAME ')' problem_defs ')'

    NAME  schiebe und gehe zu Zustand 12 über


Zustand 10

   36 domain_symbol: NAME .

    $default  reduziere mit Regel 36 (domain_symbol)


Zustand 11

    3 domain: '(' KEY_DEFINE '(' KEY_DOMAIN domain_symbol . ')' domain_defs ')'

    ')'  schiebe und gehe zu Zustand 13 über


Zustand 12

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME . ')' '(' KEY_DOMAIN NAME ')' problem_defs ')'

    ')'  schiebe und gehe zu Zustand 14 über


Zustand 13

    3 domain: '(' KEY_DEFINE '(' KEY_DOMAIN domain_symbol ')' . domain_defs ')'

    $default  reduziere mit Regel 11 (domain_defs)

    domain_defs  gehe zu Zustand 15 über


Zustand 14

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' . '(' KEY_DOMAIN NAME ')' problem_defs ')'

    '('  schiebe und gehe zu Zustand 16 über


Zustand 15

    3 domain: '(' KEY_DEFINE '(' KEY_DOMAIN domain_symbol ')' domain_defs . ')'
    4 domain_defs: domain_defs . require_def
    5            | domain_defs . type_def
    6            | domain_defs . const_def
    7            | domain_defs . predicates_def
    8            | domain_defs . functions_def
    9            | domain_defs . task_def
   10            | domain_defs . method_def

    '('  schiebe und gehe zu Zustand 17 über
    ')'  schiebe und gehe zu Zustand 18 über

    require_def     gehe zu Zustand 19 über
    type_def        gehe zu Zustand 20 über
    const_def       gehe zu Zustand 21 über
    predicates_def  gehe zu Zustand 22 über
    functions_def   gehe zu Zustand 23 über
    task_def        gehe zu Zustand 24 über
    method_def      gehe zu Zustand 25 über


Zustand 16

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' . KEY_DOMAIN NAME ')' problem_defs ')'

    KEY_DOMAIN  schiebe und gehe zu Zustand 26 über


Zustand 17

   37 require_def: '(' . KEY_REQUIREMENTS require_defs ')'
   40 type_def: '(' . KEY_TYPES type_def_list ')'
   43 const_def: '(' . KEY_CONSTANTS constant_declaration_list ')'
   47 predicates_def: '(' . KEY_PREDICATES atomic_predicate_def-list ')'
   51 functions_def: '(' . KEY_FUNCTIONS typed_atomic_function_def-list ')'
   59 task_def: '(' . task_or_action NAME parameters-option precondition_option effect_option ')'
   64 method_def: '(' . KEY_METHOD NAME parameters-option KEY_TASK '(' NAME var_or_const-list ')' precondition_option effect_option tasknetwork_def ')'

    KEY_TYPES         schiebe und gehe zu Zustand 27 über
    KEY_REQUIREMENTS  schiebe und gehe zu Zustand 28 über
    KEY_PREDICATES    schiebe und gehe zu Zustand 29 über
    KEY_FUNCTIONS     schiebe und gehe zu Zustand 30 über
    KEY_TASK          schiebe und gehe zu Zustand 31 über
    KEY_CONSTANTS     schiebe und gehe zu Zustand 32 über
    KEY_ACTION        schiebe und gehe zu Zustand 33 über
    KEY_METHOD        schiebe und gehe zu Zustand 34 über

    task_or_action  gehe zu Zustand 35 über


Zustand 18

    3 domain: '(' KEY_DEFINE '(' KEY_DOMAIN domain_symbol ')' domain_defs ')' .

    $default  reduziere mit Regel 3 (domain)


Zustand 19

    4 domain_defs: domain_defs require_def .

    $default  reduziere mit Regel 4 (domain_defs)


Zustand 20

    5 domain_defs: domain_defs type_def .

    $default  reduziere mit Regel 5 (domain_defs)


Zustand 21

    6 domain_defs: domain_defs const_def .

    $default  reduziere mit Regel 6 (domain_defs)


Zustand 22

    7 domain_defs: domain_defs predicates_def .

    $default  reduziere mit Regel 7 (domain_defs)


Zustand 23

    8 domain_defs: domain_defs functions_def .

    $default  reduziere mit Regel 8 (domain_defs)


Zustand 24

    9 domain_defs: domain_defs task_def .

    $default  reduziere mit Regel 9 (domain_defs)


Zustand 25

   10 domain_defs: domain_defs method_def .

    $default  reduziere mit Regel 10 (domain_defs)


Zustand 26

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN . NAME ')' problem_defs ')'

    NAME  schiebe und gehe zu Zustand 36 über


Zustand 27

   40 type_def: '(' KEY_TYPES . type_def_list ')'

    $default  reduziere mit Regel 150 (NAME-list)

    type_def_list        gehe zu Zustand 37 über
    NAME-list-non-empty  gehe zu Zustand 38 über
    NAME-list            gehe zu Zustand 39 über


Zustand 28

   37 require_def: '(' KEY_REQUIREMENTS . require_defs ')'

    $default  reduziere mit Regel 39 (require_defs)

    require_defs  gehe zu Zustand 40 über


Zustand 29

   47 predicates_def: '(' KEY_PREDICATES . atomic_predicate_def-list ')'

    $default  reduziere mit Regel 49 (atomic_predicate_def-list)

    atomic_predicate_def-list  gehe zu Zustand 41 über


Zustand 30

   51 functions_def: '(' KEY_FUNCTIONS . typed_atomic_function_def-list ')'

    $default  reduziere mit Regel 56 (atomic_function_def-list)

    typed_atomic_function_def-list  gehe zu Zustand 42 über
    atomic_function_def-list        gehe zu Zustand 43 über


Zustand 31

   57 task_or_action: KEY_TASK .

    $default  reduziere mit Regel 57 (task_or_action)


Zustand 32

   43 const_def: '(' KEY_CONSTANTS . constant_declaration_list ')'

    $default  reduziere mit Regel 45 (constant_declaration_list)

    constant_declaration_list  gehe zu Zustand 44 über


Zustand 33

   58 task_or_action: KEY_ACTION .

    $default  reduziere mit Regel 58 (task_or_action)


Zustand 34

   64 method_def: '(' KEY_METHOD . NAME parameters-option KEY_TASK '(' NAME var_or_const-list ')' precondition_option effect_option tasknetwork_def ')'

    NAME  schiebe und gehe zu Zustand 45 über


Zustand 35

   59 task_def: '(' task_or_action . NAME parameters-option precondition_option effect_option ')'

    NAME  schiebe und gehe zu Zustand 46 über


Zustand 36

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME . ')' problem_defs ')'

    ')'  schiebe und gehe zu Zustand 47 über


Zustand 37

   40 type_def: '(' KEY_TYPES type_def_list . ')'

    ')'  schiebe und gehe zu Zustand 48 über


Zustand 38

   42 type_def_list: NAME-list-non-empty . '-' NAME type_def_list

    '-'  schiebe und gehe zu Zustand 49 über


Zustand 39

   41 type_def_list: NAME-list .
  148 NAME-list-non-empty: NAME-list . NAME
  149 NAME-list: NAME-list . NAME

    NAME  schiebe und gehe zu Zustand 50 über

    $default  reduziere mit Regel 41 (type_def_list)


Zustand 40

   37 require_def: '(' KEY_REQUIREMENTS require_defs . ')'
   38 require_defs: require_defs . REQUIRE_NAME

    REQUIRE_NAME  schiebe und gehe zu Zustand 51 über
    ')'           schiebe und gehe zu Zustand 52 über


Zustand 41

   47 predicates_def: '(' KEY_PREDICATES atomic_predicate_def-list . ')'
   48 atomic_predicate_def-list: atomic_predicate_def-list . atomic_predicate_def

    '('  schiebe und gehe zu Zustand 53 über
    ')'  schiebe und gehe zu Zustand 54 über

    atomic_predicate_def  gehe zu Zustand 55 über


Zustand 42

   51 functions_def: '(' KEY_FUNCTIONS typed_atomic_function_def-list . ')'

    ')'  schiebe und gehe zu Zustand 56 über


Zustand 43

   52 typed_atomic_function_def-list: atomic_function_def-list . typed_function_list_continuation
   55 atomic_function_def-list: atomic_function_def-list . atomic_predicate_def

    '('  schiebe und gehe zu Zustand 53 über
    '-'  schiebe und gehe zu Zustand 57 über

    $default  reduziere mit Regel 54 (typed_function_list_continuation)

    atomic_predicate_def              gehe zu Zustand 58 über
    typed_function_list_continuation  gehe zu Zustand 59 über


Zustand 44

   43 const_def: '(' KEY_CONSTANTS constant_declaration_list . ')'
   44 constant_declaration_list: constant_declaration_list . constant_declarations

    ')'  schiebe und gehe zu Zustand 60 über

    $default  reduziere mit Regel 150 (NAME-list)

    constant_declarations  gehe zu Zustand 61 über
    NAME-list-non-empty    gehe zu Zustand 62 über
    NAME-list              gehe zu Zustand 63 über


Zustand 45

   64 method_def: '(' KEY_METHOD NAME . parameters-option KEY_TASK '(' NAME var_or_const-list ')' precondition_option effect_option tasknetwork_def ')'

    KEY_PARAMETERS  schiebe und gehe zu Zustand 64 über

    $default  reduziere mit Regel 30 (parameters-option)

    parameters-option  gehe zu Zustand 65 über


Zustand 46

   59 task_def: '(' task_or_action NAME . parameters-option precondition_option effect_option ')'

    KEY_PARAMETERS  schiebe und gehe zu Zustand 64 über

    $default  reduziere mit Regel 30 (parameters-option)

    parameters-option  gehe zu Zustand 66 über


Zustand 47

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME ')' . problem_defs ')'

    $default  reduziere mit Regel 20 (problem_defs)

    problem_defs  gehe zu Zustand 67 über


Zustand 48

   40 type_def: '(' KEY_TYPES type_def_list ')' .

    $default  reduziere mit Regel 40 (type_def)


Zustand 49

   42 type_def_list: NAME-list-non-empty '-' . NAME type_def_list

    NAME  schiebe und gehe zu Zustand 68 über


Zustand 50

  148 NAME-list-non-empty: NAME-list NAME .
  149 NAME-list: NAME-list NAME .

    '-'       reduziere mit Regel 148 (NAME-list-non-empty)
    $default  reduziere mit Regel 149 (NAME-list)


Zustand 51

   38 require_defs: require_defs REQUIRE_NAME .

    $default  reduziere mit Regel 38 (require_defs)


Zustand 52

   37 require_def: '(' KEY_REQUIREMENTS require_defs ')' .

    $default  reduziere mit Regel 37 (require_def)


Zustand 53

   50 atomic_predicate_def: '(' . NAME typed_var_list ')'

    NAME  schiebe und gehe zu Zustand 69 über


Zustand 54

   47 predicates_def: '(' KEY_PREDICATES atomic_predicate_def-list ')' .

    $default  reduziere mit Regel 47 (predicates_def)


Zustand 55

   48 atomic_predicate_def-list: atomic_predicate_def-list atomic_predicate_def .

    $default  reduziere mit Regel 48 (atomic_predicate_def-list)


Zustand 56

   51 functions_def: '(' KEY_FUNCTIONS typed_atomic_function_def-list ')' .

    $default  reduziere mit Regel 51 (functions_def)


Zustand 57

   53 typed_function_list_continuation: '-' . NAME typed_atomic_function_def-list

    NAME  schiebe und gehe zu Zustand 70 über


Zustand 58

   55 atomic_function_def-list: atomic_function_def-list atomic_predicate_def .

    $default  reduziere mit Regel 55 (atomic_function_def-list)


Zustand 59

   52 typed_atomic_function_def-list: atomic_function_def-list typed_function_list_continuation .

    $default  reduziere mit Regel 52 (typed_atomic_function_def-list)


Zustand 60

   43 const_def: '(' KEY_CONSTANTS constant_declaration_list ')' .

    $default  reduziere mit Regel 43 (const_def)


Zustand 61

   44 constant_declaration_list: constant_declaration_list constant_declarations .

    $default  reduziere mit Regel 44 (constant_declaration_list)


Zustand 62

   46 constant_declarations: NAME-list-non-empty . '-' NAME

    '-'  schiebe und gehe zu Zustand 71 über


Zustand 63

  148 NAME-list-non-empty: NAME-list . NAME
  149 NAME-list: NAME-list . NAME

    NAME  schiebe und gehe zu Zustand 50 über


Zustand 64

   29 parameters-option: KEY_PARAMETERS . '(' typed_var_list ')'

    '('  schiebe und gehe zu Zustand 72 über


Zustand 65

   64 method_def: '(' KEY_METHOD NAME parameters-option . KEY_TASK '(' NAME var_or_const-list ')' precondition_option effect_option tasknetwork_def ')'

    KEY_TASK  schiebe und gehe zu Zustand 73 über


Zustand 66

   59 task_def: '(' task_or_action NAME parameters-option . precondition_option effect_option ')'

    KEY_PRECONDITION  schiebe und gehe zu Zustand 74 über

    $default  reduziere mit Regel 61 (precondition_option)

    precondition_option  gehe zu Zustand 75 über


Zustand 67

   12 problem: '(' KEY_DEFINE '(' KEY_PROBLEM NAME ')' '(' KEY_DOMAIN NAME ')' problem_defs . ')'
   13 problem_defs: problem_defs . require_def
   14             | problem_defs . p_object_declaration
   15             | problem_defs . p_htn
   16             | problem_defs . p_init
   17             | problem_defs . p_goal
   18             | problem_defs . p_constraint
   19             | problem_defs . p_metric

    '('  schiebe und gehe zu Zustand 76 über
    ')'  schiebe und gehe zu Zustand 77 über

    p_object_declaration  gehe zu Zustand 78 über
    p_init                gehe zu Zustand 79 über
    p_goal                gehe zu Zustand 80 über
    p_htn                 gehe zu Zustand 81 über
    p_constraint          gehe zu Zustand 82 über
    p_metric              gehe zu Zustand 83 über
    require_def           gehe zu Zustand 84 über


Zustand 68

   42 type_def_list: NAME-list-non-empty '-' NAME . type_def_list

    $default  reduziere mit Regel 150 (NAME-list)

    type_def_list        gehe zu Zustand 85 über
    NAME-list-non-empty  gehe zu Zustand 38 über
    NAME-list            gehe zu Zustand 39 über


Zustand 69

   50 atomic_predicate_def: '(' NAME . typed_var_list ')'

    $default  reduziere mit Regel 157 (typed_var_list)

    typed_var_list  gehe zu Zustand 86 über


Zustand 70

   53 typed_function_list_continuation: '-' NAME . typed_atomic_function_def-list

    $default  reduziere mit Regel 56 (atomic_function_def-list)

    typed_atomic_function_def-list  gehe zu Zustand 87 über
    atomic_function_def-list        gehe zu Zustand 43 über


Zustand 71
